--- a/styles/home.css
+++ b/styles/home.css
@@ -4,6 +4,7 @@
     grid-gap: 12px;
     max-width: 100%; /* Ensure grid doesn't exceed body width */
     margin: 0 auto; /* Center the grid horizontally */
+    padding: 32px 0; /* Add top and bottom padding of 32px */
 }
 
 .grid-item:nth-child(-n + 2) { /* Target the first two photos */
@@ -22,4 +23,17 @@
     width: 100%;
     height: auto;
     object-fit: cover; 
+}
+
+.instagram-link {
+    display: block;
+    width: 24px; /* Set the width to 24px */
+    height: 24px; /* Set the height to 24px */
+    margin-bottom: 20px; 
+}
+
+.instagram-link img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Ensure the image fits within the link without distortion */
 }
