--- a/styles/common.css
+++ b/styles/common.css
@@ -1,3 +1,9 @@
 body {
     padding: 24px;
 }
+
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
