--- a/styles/home.css
+++ b/styles/home.css
@@ -1,3 +1,8 @@
+.social-links-container {
+    padding-top: 32px;
+    padding-bottom: 8px;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Two columns */
@@ -29,13 +34,11 @@
     display: block;
     width: 24px; /* Set the width to 24px */
     height: 24px; /* Set the height to 24px */
-    margin-bottom: 20px; 
+    margin-bottom: 20px;
 }
 
 .instagram-link img {
     width: 100%;
     height: 100%;
     object-fit: contain; /* Ensure the image fits within the link without distortion */
-    padding-top: 32px;
-    padding-bottom: 8px;
 }
