--- a/styles/common.css
+++ b/styles/common.css
@@ -2,8 +2,12 @@ body {
     padding: 24px;
 }
 
-.bebas-neue-regular {
-  font-family: "Bebas Neue", sans-serif;
+.handjet {
+  font-family: "Handjet", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-variation-settings:
+    "ELGR" 1,
+    "ELSH" 2;
 }
