--- a/styles/home.css
+++ b/styles/home.css
@@ -42,3 +42,9 @@
     height: 100%;
     object-fit: contain; /* Ensure the image fits within the link without distortion */
 }
+
+.outro {
+    font-size: 28px;
+    width: 75%;
+    margin: 0 auto;
+}
