--- a/styles/menu.css
+++ b/styles/menu.css
@@ -3,6 +3,7 @@
     justify-content: space-between; /* Align items to left and right */
     align-items: center; /* Vertically center items */
     padding: 10px; /* Add some padding */
+    text-transform: uppercase;
 }
 
 .menu-links {
@@ -11,13 +12,26 @@
     padding: 0;
 }
 
+.menu a {
+    text-decoration: none; /* Remove underline */
+    color: #888;
+    transition: color 0.4s ease;
+}
+
+.menu a:hover {
+    color: white;
+}
+
 .menu-links li {
     display: inline; /* Display links horizontally */
     margin-right: 20px; /* Add space between links */
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .menu-title {
-    font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
+}
+
+#menu-link-active {
+    color: white;
 }
