--- a/styles/about.css
+++ b/styles/about.css
@@ -22,7 +22,7 @@
 .about-me-outro {
     font-size: 16px;
     line-height: 32px;
-    color: #a0a0a0;
+    color: #707070;
 }
 
 /* Optional: Add some responsive styling */
