--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,6 @@ footer {
     text-align: center;
     padding: 10px;
     margin-top: 128px;
-    color: #b0b0b0;
+    color: #9a9a9a;
     text-transform: uppercase;
 }
