--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -62,7 +62,7 @@
 }
 
 .grid-item:nth-child(3) { /* Target the third photo */
-    grid-column: 1 / span 2; 
+    grid-column: 1 / span 2;
 }
 
 .grid-item:nth-child(-n + 5) { /* Target all five photos */
@@ -72,6 +72,7 @@
 .grid-item img {
     width: 100%;
     height: auto;
+    max-height: 650px;
     object-fit: cover; 
 }
 
